ajout du crs dans le fichier parquet final

--- a/create_meta.ipynb
+++ b/create_meta.ipynb
@@ -212,10 +212,11 @@
     "        bounds[file_key] = str(image.bounds)\n",
     "        crs[file_key] = str(image.crs)\n",
     "        polygon_image = create_geojson_from_image(image)\n",
-    "        polygon_wkt = polygon_image.geometry[0].wkt\n",
-    "        polygon_images[file_key] = polygon_wkt\n",
-    "        df = pd.concat([df, pd.DataFrame([{'Filepath': file_key, 'Polygon': polygon_wkt}])], ignore_index=True)\n",
-    "        meta_files.append(file_key)\n"
+    "        if not polygon_image.empty:\n",
+    "            polygon_wkt = polygon_image.geometry[0].wkt\n",
+    "            polygon_images[file_key] = polygon_wkt\n",
+    "            df = pd.concat([df, pd.DataFrame([{'Filepath': file_key, 'Polygon': polygon_wkt, \"CRS\": str(image.crs)}])], ignore_index=True)\n",
+    "            meta_files.append(file_key)\n"
    ]
   },
   {
